artifacts/deployments/nginx-ingress-gateway -ssl/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: app2
