artifacts/deployments/nginx-ingress-gateway -ssl/ingress-app1.yaml
# Ingress to App1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  annotations:
    kubernetes.io/ingress.class: nginx # <-- Nginx Ingress Controller automatically detects this annotation
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # <-- Redirects to HTTPS
    nginx.ingress.kubernetes.io/use-regex: "true" # <-- Allow to use Regex for Managing Routing 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #<-- Rewrites the request with the first capture group
    cert-manager.io/cluster-issuer: letsencrypt # <-- Name of the Cluster Issuer
spec:
  tls:
  - hosts:
    - aks.codefeeling.com.br
    secretName: app1-codefeeling-tls
  rules:
  - host: aks.codefeeling.com.br # <-- Add your custom domain here
    http:
      paths:
      # Matches:
      # /app1
      # /app1/
      # /app1/something(*)
      # Rewrites to : /app1/ or /app1
      - path: /app1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: app1 # <-- Redirects to service app1
            port:
              number: 80
      # Used to load frontend images
      # Ex: /static/acs.png
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: app1 # <-- Redirects to service app1
            port:
              number: 80
