artifacts/deployments/nginx-ingress-gateway -ssl/ingress-app2.yaml
# Ingress to App2
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  annotations:
    kubernetes.io/ingress.class: nginx # <-- Nginx Ingress Controller automatically detects this annotation
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true" # <-- Allow to use Regex for Managing Routing 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #<-- Rewrites the request with the first capture group
    cert-manager.io/cluster-issuer: letsencrypt # <-- Name of the Cluster Issuer
spec:
  tls:
  - hosts:
    - aks.codefeeling.com.br
    secretName: app2-codefeeling-tls
  rules:
  - host: aks.codefeeling.com.br # <-- Add your custom domain here
    http:
      paths:
      # Matches:
      # /app2
      # /app2/
      # /app2/something(*)
      # Rewrites to : /app2/ or /app2
      - path: /app2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: app2 # <-- Redirects to service app2
            port:
              number: 80
      # Used to load frontend images
      # Ex: /static/acs.png
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: app2 # <-- Redirects to service app2
            port:
              number: 80
